--- a/vignettes/Documentation/tradeDocumentation.Rmd
+++ b/vignettes/Documentation/tradeDocumentation.Rmd
@@ -14,7 +14,7 @@ output:
 
 The trade module is divided in two submodules: `complete_tf_cpc`
 and `total_trade_CPC`. Each module is year specific. This means
-that, at the time being, the trade module run indipendently for
+that, at the time being, the trade module runs indipendently for
 each year. In order to run the `total_trade_CPC`, the output of
 `complete_tf_cpc` is needed. All tables and graphs present in this
 documentation are just examples. More details on the data are
@@ -29,9 +29,8 @@ UNSD Tariffline and Eurostat Data. The data is prefiltered as
 shown below. In all cases, the module downloads only records of
 commodities of interest. The HS chapters are the following:
 
-  01, 02, 03, 04, 05, 06, 07, 08, 09, 10, 11, 12, 13, 14, 15, 16,
-  17, 18, 19, 20, 21, 22, 23, 24, 33, 35, 38, 40, 41, 42, 43, 50,
-  51, 52, 53.
+  01, 02, 03, 04, 05, 06, 07, 08, 09, 10, 11, 12, 13, 14, 15, 16, 17, 18,
+  19, 20, 21, 22, 23, 24, 33, 35, 38, 40, 41, 42, 43, 50, 51, 52, 53.
 
 In the future, if other commodities become of interest for
 the division, it is important to include additional chapters in
@@ -51,7 +50,9 @@ the first step of the downloading.
   are not allowed).
 
 - only numeric CN8 codes (`hs`) are kept (letters are not
-  allowed)
+  allowed).
+
+- only `stat_regime` equal to 4 is kept.
 
     ##   reporter partner       hs flow year  value weight   qty    hs6
     ## 1       11      10 85193000    2 2009  83.96    2.2  1010 851930
@@ -60,8 +61,6 @@ the first step of the downloading.
     ## 4       11      10 85198125    1 2009   1.06    0.0     5 851981
     ## 5       11      10 85198125    2 2009  17.07    0.0   171 851981
     ## 6       11      10 85198131    1 2009   9.90    0.0   159 851981
-
-- only `stat_regime` equal to 4 is kept.
 
 ### UNSD
 
