--- a/vignettes/Documentation/tradeDocumentation.Rmd
+++ b/vignettes/Documentation/tradeDocumentation.Rmd
@@ -52,7 +52,17 @@ the first step of the downloading.
 - only numeric CN8 codes (`hs`) are kept (letters are not
   allowed).
 
-- only `stat_regime` equal to 4 is kept.
+- only `stat_regime` equal to 4 is kept: "In this system, the
+  recorded aggregates include all goods entering or leaving the
+  economic territory of a country with the exception of simple
+  transit trade. In particular, all goods received into customs
+  warehouses are recorded as imports, regardless of whether they
+  subsequently go into free circulation in the Member State of
+  receipt. Similarly, outgoing goods from customs warehouses are
+  included in the general trade aggregates, at the time they leave
+  the Member State" (see pag. 9 in *DG Trade Statistical Guide*,
+  June 2016,
+  http://trade.ec.europa.eu/doclib/docs/2013/may/tradoc_151348.pdf).
 
     ##   reporter partner       hs flow year  value weight   qty    hs6
     ## 1       11      10 85193000    2 2009  83.96    2.2  1010 851930
