--- a/vignettes/Documentation/tradeDocumentation.Rmd
+++ b/vignettes/Documentation/tradeDocumentation.Rmd
@@ -9,7 +9,7 @@ author:
 abstract: |
   The trade module is divided in two submodules: `complete_tf_cpc`
   and `total_trade_CPC`. Each module is year specific. This means
-  that, at the time being, the trade module runs indipendently for
+  that, at the time being, the trade module runs independently for
   each year. In order to run the `total_trade_CPC`, the output of
   `complete_tf_cpc` is needed. All tables and graphs present in this
   documentation are just examples. More details on the data are
@@ -24,6 +24,11 @@ output:
     number_sections: true
 ---
 
+```{r setup, echo=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+examples <- readRDS('examples.rds')
+```
+
 # Complete tf cpc
 
 ## Data
@@ -32,37 +37,31 @@ Raw data are provided by the SWS Team (subunit of Team F) for both
 UNSD Tariff line and Eurostat Data. The data is prefiltered by
 downloading only chapters of interest, which are:
 
-  01, 02, 03, 04, 05, 06, 07, 08, 09, 10, 11, 12, 13, 14, 15, 16, 17, 18,
-  19, 20, 21, 22, 23, 24, 33, 35, 38, 40, 41, 43, 50, 51, 52, 53.
+  01, 02, 03, 04, 05, 06, 07, 08, 09, 10, 11, 12, 13, 14, 15, 16, 17,
+  18, 19, 20, 21, 22, 23, 24, 33, 35, 38, 40, 41, 43, 50, 51, 52, 53.
 
 In the future, if other commodities become of interest for
 the division, it is important to include additional chapters in
 the first step of the downloading.
 
-  ##  reporter partner       hs flow year     value weight qty qunit    hs6
-  ##        90     458     3303    1 2009  54.75252     NA  NA     1   3303
-  ##       184      36 07121000    1 2009 634.93650     NA  NA     1 071210
-  ##       184      36 09011200    1 2009 470.57794     NA  NA     1 090112
-  ##       184     554 12100000    1 2009 544.94550     NA  NA     1 121000
-  ##       184     504 21050020    1 2009 379.96200     NA  NA     1 210500
-  ##        90      36     5203    1 2009  36.37752     NA  NA     1   5203
+```{r}
+knitr::kable(examples$tldata_raw, row.names = FALSE, caption =
+'Subset of Tariff line data', digits = 2)
+
+knitr::kable(examples$esdata_raw, row.names = FALSE, caption =
+'Subset of Eurostat data', digits = 2)
+```
 
 Besides filtering by chapters, only some HS codes inside the
 chapters are considered. These codes are given in the
 `hs6faointerest` datatable:
 
-  ##  hs6_code
-  ##    010100
-  ##    010101
-  ##    010102
-  ##    010103
-  ##    010104
-  ##       ...       
-  ##    530596
-  ##    530597
-  ##    530598
-  ##    530599
-  ##    530810
+```{r}
+# If a single column, the caption is not shown and next table
+# has a n+1 number. Bug?
+knitr::kable(dplyr::mutate(examples$hs6faointerest, ` ` = ''),
+row.names = FALSE, caption = 'HS-6 codes of interest')
+```
 
 Both Eurostat and Tariff line data are given the same variable
 names and data types before being processed further.
@@ -107,6 +106,20 @@ Missing variables of the same type are also aggregated if they are
 *all* missing, as they will produce a missing aggregated value for
 missing disaggregated values while correctly summing the remaining
 variables.
+
+```{r}
+knitr::kable(examples$tldata_multiple, row.names = FALSE,
+caption = 'Example of multiple transactions by
+reporter / partner / flow / hs')
+```
+
+The result of the aggregation of the previous example is the
+following.
+
+```{r}
+knitr::kable(examples$tldata_multiple_aggregated, row.names = FALSE,
+caption = 'Results of the aggregation of multiple transactions')
+```
 
 ### Mapping UNSD Tariff line and Eurostat data
 
@@ -189,45 +202,28 @@ the nature of the differences among the two datasets.
    without an FCL mapping are filtered out and saved in specific
    variables.
 
-    ## # A tibble: 862,329 x 8
-    ##   area  flow fromcode   tocode   fcl startyear endyear
-    ##      1     1 01011010 01011010  1096      2005    2050
-    ##      1     1 01011900 01011999  1096      2000    2050
-    ##      1     1 01012010 01012010  1107      2000    2050
-    ##      1     1 01012090 01012090  1110      2000    2050
-    ##      1     1 01019019 01019019  1096      2011    2050
-    ##      1     1 01021000 01029079   866      2000    2050
-    ##      1     1 01029090 01029090   866      2000    2050
-    ##      1     1 01030000 01039999  1034      2000    2050
-    ##      1     1 01041000 01041999   976      2000    2050
-    ##      1     1 01042000 01042999  1016      2000    2050
-    ## # ... with 862,319 more rows
-
-    Some codes can be unmapped in the previous table, i.e., no FCL
-    code can be assigned to some HS codes. In this case, the
-    module generates a list of this codes that is sent to Team B/C
-    so that they can update the table by including these missing
-    codes. Moreover, some of the original codes in the HS-FCL
-    mapping can be better mapped to another FCL code: the mapping
-    table has a `correction_fcl` that can be used to override the
-    original `fcl` variable. This feature was requested by Team
-    B/C that is responsible for these corrections.
+   ```{r}
+   knitr::kable(examples$hsfclmap[ ,c('area', 'flow', 'fromcode',
+   'tocode', 'fcl', 'startyear', 'endyear')], row.names = FALSE,
+   caption = 'Subset of the HS to FCL mapping table')
+   ```
+   
+   Some codes can be unmapped in the previous table, i.e., no FCL
+   code can be assigned to some HS codes. In this case, the
+   module generates a list of this codes that is sent to Team B/C
+   so that they can update the table by including these missing
+   codes. Moreover, some of the original codes in the HS-FCL
+   mapping can be better mapped to another FCL code: the mapping
+   table has a `correction_fcl` that can be used to override the
+   original `fcl` variable. This feature was requested by Team
+   B/C that is responsible for these corrections.
 
 1. Information of the FCL units is added.
 
-    ## # A tibble: 614 x 2
-    ##   fcl      fclunit
-    ##   336           mt
-    ##   517           mt
-    ##   723           mt
-    ##   845           mt
-    ##   901           mt
-    ##  1079   1000 heads
-    ##  1130           mt
-    ##  1150        heads
-    ##  1293 $ value only
-    ##  1294           mt
-    ## # ... with 604 more rows
+   ```{r}
+   knitr::kable(examples$fclunits, row.names = FALSE, caption =
+   'Subset of FCL units')
+   ```
 
 1. Data conversion of units of measurements are applied to meet
    FAO standards, where all weights are reported in tonnes,
@@ -258,13 +254,10 @@ the nature of the differences among the two datasets.
    (which correpond undefined areas) are mapped to the 896 M49
    code ("Other nei").
 
-    ##  ComM49 FAO         Name
-    ##       1  68 France      
-    ##       2  15 Belg.-Luxbg 
-    ##       3 150 Netherlands 
-    ##       4  79 Fr Germany  
-    ##       5 106 Italy       
-    ##       6 229 Utd. Kingdom
+   ```{r}
+   knitr::kable(examples$geonom, row.names = FALSE, caption =
+   'Subset of geonom (Eurostat) codes')
+   ```
 
 1. Commodity codes are reported in CN8 codes (*Combined
    Nomenclature 8 digits*). The codes are converted in FCL (*FAO
@@ -288,13 +281,10 @@ the nature of the differences among the two datasets.
    the SWS, with avarage EUR/USD exchange rate for each year
    provided by Team B/C.
 
-    ##  Year ExchangeRate
-    ##  2000     0.924020
-    ##  2001     0.892860
-    ##  2002     0.946000
-    ##  2003     1.131200
-    ##  2004     1.243304
-    ##  2005     1.245755
+   ```{r}
+   knitr::kable(examples$eurusd, row.names = FALSE, caption =
+   'EUR/USD exchange rates')
+   ```
 
 ### Pre-processing reports
 
